--- a/app/src/main/res/layout/screen_splash.xml
+++ b/app/src/main/res/layout/screen_splash.xml
@@ -13,7 +13,7 @@
         android:id="@+id/imageView2"
         android:layout_width="345dp"
         android:layout_height="337dp"
-        android:src="@drawable/youtube"
+        android:src="@drawable/g"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.533"
