--- a/app/src/main/res/layout/acercade.xml
+++ b/app/src/main/res/layout/acercade.xml
@@ -11,6 +11,7 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="197dp"
+        android:src="@drawable/logo"
         android:scaleType="centerCrop"/>
 
     <ScrollView
