--- a/app/src/main/res/layout/activity_guardar.xml
+++ b/app/src/main/res/layout/activity_guardar.xml
@@ -7,12 +7,12 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/edad"
+        android:id="@+id/Anio"
         android:layout_width="324dp"
-        android:layout_height="wrap_content"
+        android:layout_height="51dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="248dp"
+        android:layout_marginTop="184dp"
         android:layout_marginEnd="153dp"
         android:layout_marginRight="153dp"
         android:ems="10"
@@ -24,25 +24,56 @@
 
     <TextView
         android:layout_width="288dp"
-        android:layout_height="43dp"
+        android:layout_height="26dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="252dp"
+        android:layout_marginTop="192dp"
         android:layout_marginEnd="167dp"
         android:layout_marginRight="167dp"
-        android:text="EDAD"
+        android:text="Año de lanzamiento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/apellido"
+        android:id="@+id/Letra"
         android:layout_width="324dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="292dp"
+        android:layout_marginEnd="153dp"
+        android:layout_marginRight="153dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="288dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="296dp"
+        android:layout_marginEnd="167dp"
+        android:layout_marginRight="167dp"
+        android:text="Breve letra"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/Cancion"
+        android:layout_width="324dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="153dp"
         android:layout_marginRight="153dp"
         android:ems="10"
@@ -55,22 +86,22 @@
     <TextView
         android:id="@+id/textView6"
         android:layout_width="288dp"
-        android:layout_height="43dp"
+        android:layout_height="25dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="108dp"
         android:layout_marginEnd="167dp"
         android:layout_marginRight="167dp"
-        android:text="APELLIDO"
+        android:text="Nombre Cancion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/nombre"
+        android:id="@+id/Cantante"
         android:layout_width="324dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="14dp"
@@ -86,13 +117,13 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="288dp"
-        android:layout_height="43dp"
+        android:layout_height="26dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="167dp"
         android:layout_marginRight="167dp"
-        android:text="NOMBRE"
+        android:text=" Nombre Artista"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,14 +135,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="134dp"
         android:layout_marginLeft="134dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="162dp"
         android:layout_marginRight="162dp"
         android:layout_marginBottom="76dp"
-        android:onClick="guardar"
+        android:onClick="guardarDatos"
         android:text="Guardar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edad" />
+        app:layout_constraintTop_toBottomOf="@+id/Letra" />
 </android.support.constraint.ConstraintLayout>
