--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,27 +16,20 @@
             android:id="@+id/action_listar"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Lista" />
-        <item
-            android:id="@+id/nav_shar"
-            android:layout_height="wrap_content"
-            android:icon="@drawable/ic_perm_device_information_black_24dp"
-            android:title="Acerca de..." />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+
     </group>
 
     <item android:title="Communicate">
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:icon="@drawable/ic_perm_device_information_black_24dp"
+                android:title="Acerca de"
+                 />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Salir" />
         </menu>
     </item>
 
